[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "disinfo-analyst"
version = "0.2.0"
description = "Disinformation Analyst — a three-task OpenEnv environment where an LLM agent analyses synthetic news + social-media propagation graphs."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "OpenEnv Submission" }
]
keywords = ["openenv", "content-moderation", "disinformation", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "openenv",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
disinfo-analyst = "app:app"
